# ssp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  makefile  meson.build  ssp.hpp
.ccls-cache/@@home@ado@git@ssp/: @usr@include@alloca.h.blob  @usr@include@asm-generic@errno-base.h.blob  @usr@include@asm-generic@errno.h.blob  @usr@include@assert.h.blob  @usr@include@c++@10@algorithm.blob  @usr@include@c++@10@array.blob  @usr@include@c++@10@backward@auto_ptr.h.blob  @usr@include@c++@10@backward@binders.h.blob  @usr@include@c++@10@bits@algorithmfwd.h.blob  @usr@include@c++@10@bits@alloc_traits.h.blob  @usr@include@c++@10@bits@allocated_ptr.h.blob  @usr@include@c++@10@bits@allocator.h.blob  @usr@include@c++@10@bits@atomic_base.h.blob  @usr@include@c++@10@bits@atomic_lockfree_defines.h.blob  @usr@include@c++@10@bits@basic_ios.h.blob  @usr@include@c++@10@bits@basic_ios.tcc.blob  @usr@include@c++@10@bits@basic_string.h.blob  @usr@include@c++@10@bits@basic_string.tcc.blob  @usr@include@c++@10@bits@char_traits.h.blob  @usr@include@c++@10@bits@charconv.h.blob  @usr@include@c++@10@bits@codecvt.h.blob  @usr@include@c++@10@bits@concept_check.h.blob  @usr@include@c++@10@bits@cpp_type_traits.h.blob  @usr@include@c++@10@bits@cxxabi_forced.h.blob  @usr@include@c++@10@bits@cxxabi_init_exception.h.blob  @usr@include@c++@10@bits@exception.h.blob  @usr@include@c++@10@bits@exception_defines.h.blob  @usr@include@c++@10@bits@exception_ptr.h.blob  @usr@include@c++@10@bits@fstream.tcc.blob  @usr@include@c++@10@bits@functexcept.h.blob  @usr@include@c++@10@bits@functional_hash.h.blob  @usr@include@c++@10@bits@hash_bytes.h.blob  @usr@include@c++@10@bits@invoke.h.blob  @usr@include@c++@10@bits@ios_base.h.blob  @usr@include@c++@10@bits@istream.tcc.blob  @usr@include@c++@10@bits@iterator_concepts.h.blob  @usr@include@c++@10@bits@locale_classes.h.blob  @usr@include@c++@10@bits@locale_classes.tcc.blob  @usr@include@c++@10@bits@locale_conv.h.blob  @usr@include@c++@10@bits@locale_facets.h.blob  (+232 more)
.ccls-cache/@home@ado@git@ssp/: test@test_helpers.hpp  test@test_helpers.hpp.blob  test@test_parser.cpp  test@test_parser.cpp.blob
.github/fuzz/: makefile  ssp_fuzz.cpp
.github/workflows/: ci.yml  coverage.yml  fuzz.yml  macos-apple-clang.yml  macos-latest-clang.yml  msys2-clang.yml  msys2-gcc.yml  msys2.yml  single-header.yml  ubuntu-latest-clang.yml  ubuntu-latest-gcc.yml  ubuntu-latest-icc.yml  ubuntu-latest-icc2.yml  vs16.yml  win-icc.yml  win-latest-msvc.yaml  win-msvc.yaml  win-msvc.yml  win-msys2-clang.yml  win-msys2-gcc.yml
fuzz/: build.sh  makefile  ssp_fuzz.cpp
hbuild/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  install_manifest.txt
include/ss/: common.hpp  converter.hpp  exception.hpp  extract.hpp  function_traits.hpp  parser.hpp  restrictions.hpp  setup.hpp  splitter.hpp  type_traits.hpp
script/: ci_install_deps.sh  ci_install_lcov.sh  ci_setup_icc.sh  ci_win_setup_icc.bat  single_header_generator.py  test_single_header.sh
subprojects/: doctest.wrap  fast_float.wrap
test/: CMakeLists.txt  makefile  meson.build  test_converter  test_converter.cpp  test_extractions.cpp  test_extractions_without_fast_float.cpp  test_helpers.hpp  test_parser.cpp  test_parser1.hpp  test_parser1_1.cpp  test_parser1_2.cpp  test_parser1_3.cpp  test_parser1_4.cpp  test_parser1_5.cpp  test_parser2.cpp  test_parser2.hpp  test_parser2_1.cpp  test_parser2_2.cpp  test_parser2_3.cpp  test_parser2_4.cpp  test_parser2_5.cpp  test_parser2_6.cpp  test_parser2_segment1.cpp  test_parser2_segment2.cpp  test_parser2_segment3.cpp  test_parser2_segment4.cpp  test_single_header.sh  test_single_header_main.txt  test_splitter.cpp
